<resources>
    <string name="app_name">Open Crypto Wallet</string>
    <string name="app_name_1">Open</string>
    <string name="app_name_2">Crypto Wallet</string>
    <string name="subtitle_1">Manage your cryptowallet securely</string>
    <string name="subtitle_2">Powered by Samsung Blockchain Keystore SDK</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">My Dashboard</string>
    <string name="menu_send_ether">Send Ether</string>
    <string name="menu_transaction_history">Transaction History</string>
    <string name="menu_settings">Settings</string>

    <string name="account_name">Account Name</string>
    <string name="public_address">Public Address</string>
    <string name="current_balance">Current Balance</string>
    <string name="qr_code">QR Code</string>


    <string name="launch_nav">Launch Navigation Activity</string>
    <string name="get_started">Start</string>
    <string name="adding_account_not_supported_title">Not Supported</string>
    <string name="add_account_not_supported">Adding account is not supported for this device</string>
    <string name="internet_not_available_title">Connection Error</string>

    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="api_level_not_matched_tittle">SBK Update Required</string>
    <string name="api_level_not_matched_message">Samsung Blockchain Keystore is required to update for using Open Crypto Wallet Features.</string>
    <string name="update_sbk">Update SBK</string>

    <string name="sbk_not_set_title">SBK setup not completed</string>
    <string name="sbk_not_set_message">Samsung Blockchain Keystore is not set, Please setup SBK first.</string>
    <string name="jump_sbk">Go to SBK</string>
    <string name="use_other_keymanager">Use other keyManager</string>

    <string name="sbk_error_title">SBK Error</string>
    <string name="sbk_invalid_address">Receiver Address is invalid</string>
    <string name="sbk_connection_error">Please check internet connection</string>
    <string name="sbk_operation_failed">Operation Failed</string>
    <string name="sbk_enable_developer_options">Please enable developer options from Samsung Blockchain Keystore App</string>
    <string name="sbk_unknown_error">Unknown Error</string>

    <string name="sign_transaction">Sign Transaction</string>
    <string name="send_ether">Send Ether</string>
    <string name="sender_public_address">Sender\'s Public Address</string>
    <string name="receiver_public_address">Receiver\'s Public Address</string>
    <string name="ether_amount">Ether Amount</string>
    <string name="transaction_speed">Transaction Speed</string>
    <string name="send_speed_slow">Slow</string>
    <string name="send_speed_average">Average</string>
    <string name="send_speed_fast">Fast</string>
    <string name="hex_data">Hex Data (Optional)</string>

    <string name="send_ether_error_title">Send Ether Error</string>
    <string name="receiver_address_blank">Receiver Address cannot be blank</string>
    <string name="ether_amount_blank">Ether Amount cannot be blank</string>
    <string name="ether_amount_not_enough">Not enough Ether</string>
    <string name="transaction_speed_not_selected">Please select Transaction Speed</string>

    <string name="transaction_missing">Please sign transaction first</string>
    <string name="transaction_signing_title">Transaction Signing</string>
    <string name="transaction_signing_successful">Transaction Signing Successful</string>

    <string name="add_new_account_title">Add new account</string>
    <string name="add_new_account_message">Do you want to add a new account?</string>

    <string name="edit_account_name_title">Edit Account Name</string>
    <string name="edit_account_name_message">Enter new account name</string>

    <string name="hello_blank_fragment">Settings Fragment</string>

    <!-- Settings Page -->
    <string name="change_keystore_pin">Change Keystore PIN</string>
    <string name="launch_keystore">Launch Samsung Blockchain Keystore</string>
    <string name="reveal_seed">View Keystore Recovery Phrase</string>
    <string name="reset_wallet">Reset Wallet</string>
    <string name="api_level">SBK API Level</string>
    <string name="api_level_number">Reset Wallet</string>
    <string name="networks">Networks</string>
    <string name="ropsten">Ropsten Testnet</string>
    <string name="kovan">Kovan</string>
    <string name="mainnet">Mainnet</string>
    <string name="network_apply">Apply</string>
    <string name="open_source_licenses">Open Source Licenses</string>
</resources>
